--- a/src/index.html
+++ b/src/index.html
@@ -5,11 +5,27 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Template 3</title>
+    <link href="style.css" rel="stylesheet" type="text/css">
 </head>
 <body>
     <div class="wrapper">
+        <!-- header -->
+        <header>
+            <div id="logo">
+                Site Logo
+            </div>
+            <div id="menu">
+                <!-- navigation menu -->
+                <nav>
+                    <ul>
+                        <li><a href="#">Product</a></li>       
+                        <li><a href="#">Solutions</a></li>              
+                        <li><a href="#">Company</a></li>      
+                    </ul>
+                </nav>
 
-        
+            </div>
+        </header>
 
     </div>
 </body>
