--- a/src/index.html
+++ b/src/index.html
@@ -27,6 +27,74 @@
             </div>
         </header>
 
+        <main>
+
+            <div class="banner">
+                <h2>We Power eCommerce</h2>
+               <div id="desc">                
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Maxime maiores eos consectetur temporibus provident perspiciatis, voluptatem nemo aut obcaecati repellat neque dolorum excepturi natus dicta aperiam nihil ad doloribus sequi.</p>
+                <button>Learn More</button>
+               </div>
+                
+
+            </div>
+
+            <div class="cards">
+
+                <div class="card1">
+
+                    <div class="block">
+
+                    </div>
+                    <h2>Heading</h2>
+                    <br>
+                    <p>Lorem ipsum dolor, sit amet conse</p>
+                    <p> voluptatibus atque reiciendis cum. </p>
+                    <br>
+                    <a href="#">LEARN MORE</a>
+
+                </div>
+
+                <div class="card1">
+
+                    <div class="block">
+
+                    </div>
+                    <h2>Heading</h2>
+                    <br>
+                    <p>Lorem ipsum dolor, sit amet conse</p>
+                    <p> voluptatibus atque reiciendis cum. </p>
+                    <br>
+                    <a href="#">LEARN MORE</a>
+
+                </div>
+
+                <div class="card1">
+
+                    <div class="block">
+
+                    </div>
+                    <h2>Heading</h2>
+                    <br>
+                    
+                    <p>Lorem ipsum dolor, sit amet conse</p>
+                    <p> voluptatibus atque reiciendis cum. </p>
+                    <br>
+                    <a href="#">LEARN MORE</a>
+
+                </div>
+
+            </div>
+
+
+            <div class="formdiv">
+            <form>
+                <label>Subscribe Us</label><input type="text" name="email" id="email" placeholder="text box"><button type="submit"> Submit</button>
+            </form>
+
+            </div>
+        </main>
+
     </div>
 </body>
 </html>
