--- a/src/index.html
+++ b/src/index.html
@@ -95,6 +95,17 @@
             </div>
         </main>
 
+        <!-- footer -->
+        <footer>
+            <div id="side1">
+                Copyright &copy; 2020
+            </div>
+
+            <div id="side2">
+                CEDCOSS Technologies
+            </div>
+        </footer>
+
     </div>
 </body>
 </html>
